--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   backdrop: ^0.6.1
   carousel_pro: ^1.0.0
   flutter_swiper: ^1.1.6
+  cached_network_image: ^3.1.0
+  wave: ^0.2.0
+  image_picker: ^0.8.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
