--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   wave: ^0.2.0
   image_picker: ^0.8.2
 
+  firebase_auth: ^2.0.0
+  cloud_firestore: ^2.3.0
+  firebase_storage: ^9.0.0
+  firebase_core: ^1.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
