--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^2.3.0
   firebase_storage: ^9.0.0
   firebase_core: ^1.3.0
+  google_sign_in: ^5.0.5
 
 dev_dependencies:
   flutter_test:
